--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "gamecritic-frontend",
+  "name": "handshake",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@elastic/datemath": "^5.0.3",
     "@elastic/eui": "^46.2.0",
     "@emotion/react": "^11.7.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -13,11 +14,17 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.22",
+    "axios": "^0.25.0",
     "moment": "^2.29.1",
+    "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
