--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gamecritic",
+  "homepage": "https://ryan-jm.github.io/gamecritic-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +17,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.22",
     "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
@@ -29,6 +31,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
