--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,4 +22,7 @@ jobs:
         run: yarn install
 
       - name: Deploy to GitHub Pages
+        uses: oleksiyrudenko/gha-git-credentials@v2-latest
+        with:
+          token: "${{ secrets.GH_TOKEN }}"
         run: yarn deploy
