--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamecritic",
-  "homepage": "https://ryan-jm.github.io/gamecritic-frontend",
+  "homepage": "https://ryan-jm.github.io/GameCritic-Frontend/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
