--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamecritic",
-  "homepage": "https://ryan-jm.github.io/GameCritic-Frontend/",
+  "homepage": "https://ryan-jm.github.io/gamecritic-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,7 +22,6 @@
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
@@ -56,8 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-copy-to-clipboard": "^5.0.2"
   }
 }
